crates/carta/tests/snapshots/golden_e2e__rst__native__directive-name-class.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "important-note" , [ "note" , "highlighted" ] , [] )
    [ Div ( "" , [ "title" ] , [] ) [ Para [ Str "Note" ] ]
    , Para
        [ Str "Remember"
        , Space
        , Str "to"
        , Space
        , Str "hydrate."
        ]
    ]
]
