crates/carta/tests/snapshots/golden_e2e__rst__native__directives.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Image
        ( "" , [] , [] )
        [ Str "An architecture diagram" ]
        ( "diagram.png" , "" )
    ]
, Para [ Math DisplayMath "E = mc^2" ]
]
