crates/carta/tests/snapshots/golden_e2e__rst__native__headers.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    1
    ( "top-section" , [] , [] )
    [ Str "Top" , Space , Str "Section" ]
, Para
    [ Str "Body"
    , Space
    , Str "text"
    , Space
    , Str "under"
    , Space
    , Str "the"
    , Space
    , Str "top"
    , Space
    , Str "section."
    ]
, Header
    2
    ( "nested-section" , [] , [] )
    [ Str "Nested" , Space , Str "Section" ]
, Para
    [ Str "Body"
    , Space
    , Str "text"
    , Space
    , Str "under"
    , Space
    , Str "the"
    , Space
    , Str "nested"
    , Space
    , Str "section."
    ]
, Header
    3
    ( "deeper-section" , [] , [] )
    [ Str "Deeper" , Space , Str "Section" ]
, Para
    [ Str "Body"
    , Space
    , Str "text"
    , Space
    , Str "under"
    , Space
    , Str "the"
    , Space
    , Str "deeper"
    , Space
    , Str "section."
    ]
]
