crates/carta/tests/snapshots/golden_e2e__rst__native__indirect-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Follow"
    , Space
    , Str "the"
    , Space
    , Link
        ( "" , [] , [] )
        [ Str "alias" ]
        ( "https://example.com/page" , "" )
    , Space
    , Str "to"
    , Space
    , Str "its"
    , Space
    , Str "destination."
    ]
]
